# pdf-toolbox

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: advanced-options.md  cli-reference.md  getting-started.md  mcp-integration.md
scripts/: __init__.py  check.py
src/mcp_pdf_reader/: __init__.py  cli.py  pdf_tools.py  server.py
src/mcp_pdf_reader/_compat/: __init__.py
src/mcp_pdf_reader/schemas/: __init__.py  pdf.py
src/mcp_pdf_reader/services/: __init__.py  pdf_reader.py
src/mcp_pdf_reader/tools/: pdf_reader.py
src/pdf_toolbox/: __init__.py  cli.py  pdf_tools.py  server.py
src/pdf_toolbox/_compat/: __init__.py  swig.py
src/pdf_toolbox/schemas/: __init__.py  pdf.py
src/pdf_toolbox/services/: __init__.py  pdf_reader.py
src/pdf_toolbox/tools/: pdf_reader.py
tests/: test_cli.py  test_pdf_tools.py  test_tools_module.py
