[project]
name = "pdf-toolbox"
version = "2.0.0"
description = "Expose local PDFs to LLM agents via MCP: reading, chunking, semantic search."
authors = [
    { name = "Patrício Martins", email = "contato@patriciomartins.com.br" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastmcp>=2.13.1",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "typer>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_toolbox", "scripts"]

[tool.hatch.build.targets.sdist]
include = ["src/pdf_toolbox", "scripts", "README.md"]

[project.scripts]
pdf-toolbox = "pdf_toolbox.cli:start_mcp_server"
pdf-reader = "pdf_toolbox.cli:run_tool_cli"
check = "scripts.check:run_checks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:.*Swig.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
